styling the pagination display

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,5 +6,6 @@
 * Override global styles for react-slick
 */
 .slick-dots.slick-thumb li.slick-active div {
-  background-color: red;
+  background-color: #33302e;
+  color: #faebd7 !important;
 }
